--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/donejs-user/place-my-order.git"
+    "url": "bigproof2010/place-my-order"
   },
   "author": {
     "name": "webdev",
@@ -64,6 +64,7 @@
     "done-component": "^2.2.0",
     "done-css": "^3.0.2",
     "done-serve": "^3.0.0",
+    "donejs-travis": "^1.0.1",
     "generator-donejs": "^3.0.0",
     "place-my-order-api": "^1.3.0",
     "place-my-order-assets": "^0.1.7",
