--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "testee test.html --browsers firefox --reporter Spec",
     "start": "done-serve --proxy http://localhost:7070 --port 8080",
     "develop": "done-serve --develop --proxy http://localhost:7070 --port 8080",
-    "build": "node build"
+    "build": "node build",
+    "document": "documentjs"
   },
   "main": "place-my-order/index.stache!done-autorender",
   "files": [
@@ -56,6 +57,7 @@
     ]
   },
   "dependencies": {
+    "bit-tabs": "^2.0.1",
     "can": "^5.20.1",
     "can-route-pushstate": "^5.0.7",
     "can-stache-route-helpers": "^1.1.1",
@@ -63,23 +65,26 @@
     "done-autorender": "^2.4.3",
     "done-component": "^2.2.0",
     "done-css": "^3.0.2",
-    "done-serve": "^3.0.0",
+    "done-serve": "^2.0.0",
+    "donejs-documentjs": "^0.1.2",
     "donejs-travis": "^1.0.1",
     "generator-donejs": "^3.0.0",
     "place-my-order-api": "^1.3.0",
     "place-my-order-assets": "^0.1.7",
-    "steal": "^2.1.6",
-    "steal-less": "^1.2.2"
+    "steal": "^2.0.0",
+    "steal-less": "^1.2.2",
+    "steal-socket.io": "^4.2.0"
   },
   "devDependencies": {
     "can-debug": "^2.0.1",
     "can-route-hash": "^1.0.1",
+    "documentjs": "^0.5.5",
     "donejs-cli": "^3.0.0-pre.5",
     "funcunit": "^3.6.1",
     "steal-conditional": "^1.0.0",
     "steal-qunit": "^1.0.1",
     "steal-tools": "^2.0.9",
-    "testee": "^0.8.1"
+    "testee": "^0.10.2"
   },
   "license": "ISC"
 }
